Update Gallery.css to fix issue with text wrapping

--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -26,13 +26,14 @@
   transform: scale(1.05);
 }
 
-.gallery-item img {
+.gallery-image {
   position: relative;
   border-radius: 5px;
   margin-right: 10px;
   width: 50%;
   height: 150px; /* Adjusted height */
   object-fit: cover;
+
 }
 
 .gallery-text {
@@ -40,6 +41,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  width: 55%;
 }
 
 .gallery-title {
@@ -67,5 +69,6 @@
   display: flex;
   align-items: start;
   padding: 10px;
+  height: 200px;
   /* background-color: beige; */
 }
